[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Sadbot <semseriou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.68.0"
dependency_injector = "^4.35.1"
gunicorn = "^20.1.0"
uvicorn = "^0.14.0"
orjson = "^3.6.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
